k8s/headlamp-ingress-temp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-temp-route
  namespace: headlamp
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`devopspk.online`) && PathPrefix(`/headlamp`)
    kind: Rule
    priority: 1000
    services:
    - name: headlamp
      port: 80
  tls:
    certResolver: letsencrypt
