k8s/headlamp-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headlamp-basic-auth
  namespace: headlamp
spec:
  basicAuth:
    secret: headlamp-basic-auth
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-route
  namespace: headlamp
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`devopspk.online`) && PathPrefix(`/headlamp`)
    kind: Rule
    priority: 1000
    middlewares:
    - name: headlamp-basic-auth
    services:
    - name: headlamp
      port: 80
  tls:
    certResolver: letsencrypt
